Updated icon - courtesy HyperDraw Updated to 1.20.4, 1.20.6 and 1.21. Dropped support for 1.19.3 Don't provide modpack anymore for not whitelisted/banned players Added nagMessages for players joining server without automodpack installed #236 TODO: improve managing downloaded files and selfupdater